logs/arouteserver.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/aggregate6'...
Listing './lib/python3.5/site-packages/aggregate6-1.0.12.egg-info'...
Listing './lib/python3.5/site-packages/arouteserver-0.17.1.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pierky'...
Listing './lib/python3.5/site-packages/pierky/arouteserver'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/commands'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/config'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/config.d'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/enrichers'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/templates'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/templates/bird'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/templates/html'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/templates/openbgpd'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/templates/template-context'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/tests'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/tests/live_tests'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/tests/live_tests/skeleton'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/tests/live_tests/skeleton/bird'...
Listing './lib/python3.5/site-packages/pierky/arouteserver/tests/live_tests/skeleton/openbgpd'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_radix-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/radix'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './man'...
Listing './man/man1'...
Listing './man/man7'...
Listing './share'...
Listing './share/python-wheels'...
